fix: manualWrap margin-bottom 조정

--- a/components/makeMyManual/makeMyManual.module.scss
+++ b/components/makeMyManual/makeMyManual.module.scss
@@ -30,7 +30,7 @@
 
 .manualWrap {
   height: 300px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   overflow: scroll;
 }
 
